--- a/index.html
+++ b/index.html
@@ -1,338 +1,257 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Pedido de Pizzas - Garçom</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>TG SHOP LONDRINA</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
-  body {
-    margin: 0;
-    font-family: 'Fredoka One', cursive, sans-serif;
-    background: linear-gradient(120deg, #FF5F6D, #FFC371);
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: #333;
+  body {margin: 0; font-family: Arial, sans-serif; background-color: #f5f5f5;}
+  header {background-color: #111; padding: 10px 20px; color: white; display: flex; align-items: center; justify-content: space-between;}
+  header .logo {font-size: 24px; font-weight: bold;}
+  header .logo span {background: red; padding: 3px 6px; border-radius: 3px;}
+  .search-bar {flex: 1; margin: 0 20px;}
+  .search-bar input {width: 100%; padding: 8px; border-radius: 5px; border: none;}
+  .icons i {margin-left: 15px; cursor: pointer;}
+  nav {background-color: #222; padding: 10px; text-align: center;}
+  nav button {
+      background: none;
+      border: none;
+      color: white;
+      margin: 0 15px;
+      font-weight: bold;
+      font-size: 16px;
+      cursor: pointer;
   }
-  header {
-    margin: 20px 0 10px;
-    font-size: 2.2rem;
-    color: white;
-    text-shadow: 2px 2px 4px #800000;
+  nav button:hover {text-decoration: underline; color: red;}
+  .banner {background-color: red; color: white; padding: 30px; text-align: center; font-size: 24px; font-weight: bold;}
+  .produtos {display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; padding: 20px;}
+  .produto {background: white; padding: 15px; border-radius: 10px; text-align: center; box-shadow: 0 0 5px rgba(0,0,0,0.1);}
+  .produto img {max-width: 100%; height: 150px; object-fit: contain;}
+  .produto button {background-color: red; color: white; border: none; padding: 10px; width: 100%; border-radius: 5px; margin-top: 10px; cursor: pointer; font-weight: bold;}
+  footer {background: #111; color: white; text-align: center; padding: 20px; margin-top: 20px;}
+  .whatsapp-btn {position: fixed; bottom: 20px; right: 20px; background: #25D366; color: white; padding: 15px; border-radius: 50%; font-size: 24px; box-shadow: 0 0 10px rgba(0,0,0,0.3);}
+  
+  /* MODAL DO CARRINHO */
+  #carrinhoModal, #dadosClienteModal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5);
+      justify-content: center;
+      align-items: center;
   }
-  main {
-    width: 90%;
-    max-width: 400px;
-    background: #fff8f0cc;
-    border-radius: 12px;
-    padding: 15px 20px;
-    box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+  .conteudo {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      width: 400px;
+      max-height: 80vh;
+      overflow-y: auto;
   }
-  label {
-    font-weight: 600;
-    margin-top: 10px;
-    display: block;
-    color: #800000;
-  }
-  select, input[type="number"], input[type="text"], textarea {
-    width: 100%;
-    padding: 8px 10px;
-    margin-top: 5px;
-    border-radius: 8px;
-    border: 1.5px solid #d88a75;
-    font-size: 1rem;
-  }
-  textarea {
-    resize: vertical;
-  }
-  .btn {
-    background-color: #d8544a;
-    color: white;
-    font-weight: 700;
-    font-size: 1.2rem;
-    margin-top: 20px;
-    width: 100%;
-    border: none;
-    padding: 12px 0;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    box-shadow: 0 6px 10px rgba(216,84,74,0.7);
-  }
-  .btn:hover {
-    background-color: #bf3e38;
-  }
-  .item-list {
-    margin-top: 15px;
-    max-height: 300px;
-    overflow-y: auto;
-    border: 1px solid #f2b8a4;
-    border-radius: 8px;
-    background: #fff5f1;
-  }
-  .item {
-    display: flex;
-    justify-content: space-between;
-    padding: 7px 12px;
-    border-bottom: 1px solid #f2b8a4;
-    font-size: 1.1rem;
-  }
-  .item:last-child {
-    border-bottom: none;
-  }
-  .qty-input {
-    width: 50px;
-    border-radius: 6px;
-    border: 1.2px solid #d88a75;
-    padding: 3px 5px;
-    font-size: 1rem;
-    text-align: center;
-  }
-  .remove-btn {
-    background: transparent;
-    border: none;
-    font-weight: 900;
-    color: #c0392b;
-    cursor: pointer;
-    font-size: 1.3rem;
-  }
-  footer {
-    margin: 30px 0;
-    font-size: 0.9rem;
-    color: #fff;
-    text-align: center;
-    user-select: none;
-  }
-  /* Scrollbar estilizado */
-  .item-list::-webkit-scrollbar {
-    width: 8px;
-  }
-  .item-list::-webkit-scrollbar-thumb {
-    background: #d8544a;
-    border-radius: 10px;
-  }
-  .item-list::-webkit-scrollbar-track {
-    background: #ffd9cc;
-    border-radius: 10px;
-  }
-
-  /* Estilo do alerta visual */
-  #alerta-pedido-pronto {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    background-color: #d8544a;
-    color: white;
-    padding: 15px 25px;
-    border-radius: 10px;
-    box-shadow: 0 6px 15px rgba(216,84,74,0.7);
-    font-weight: 700;
-    font-size: 1.2rem;
-    z-index: 9999;
-    display: none;
+  .conteudo h2 {margin-top: 0;}
+  .item-carrinho {border-bottom: 1px solid #ddd; padding: 10px 0;}
+  .btn-finalizar {background: green; color: white; border: none; padding: 10px; width: 100%; border-radius: 5px; margin-top: 10px; cursor: pointer; font-weight: bold;}
+  .input-campo {
+      width: 100%;
+      padding: 10px;
+      margin: 8px 0;
+      border-radius: 5px;
+      border: 1px solid #ccc;
   }
 </style>
 </head>
+
 <body>
-<header>🍕 Pedido de Pizzas - Garçom</header>
-<main>
-  <label for="pizza-select">Escolha a pizza</label>
-  <select id="pizza-select">
-    <option value="" disabled selected>-- Selecione --</option>
-    <option value="Calabresa">Calabresa</option>
-    <option value="Margherita">Margherita</option>
-    <option value="Portuguesa">Portuguesa</option>
-    <option value="Frango com Catupiry">Frango com Catupiry</option>
-    <option value="Quatro Queijos">Quatro Queijos</option>
-    <option value="Napolitana">Napolitana</option>
-  </select>
+<header>
+  <div class="logo">TG <span>SHOP</span> LONDRINA</div>
+  <div class="search-bar">
+    <input type="text" placeholder="Buscar produtos...">
+  </div>
+  <div class="icons">
+    <i class="fas fa-shopping-cart" onclick="abrirCarrinho()"></i>
+  </div>
+</header>
 
-  <label for="bordas-select">Escolha a borda</label>
-  <select id="bordas-select">
-    <option value="Normal" selected>Normal</option>
-    <option value="Catupiry">Catupiry</option>
-    <option value="Cheddar">Cheddar</option>
-    <option value="Chocolate">Chocolate</option>
-  </select>
+<!-- 🔥 BOTÕES DE CATEGORIA -->
+<nav>
+  <button onclick="filtrarProdutos('todos')">Todos</button>
+  <button onclick="filtrarProdutos('roupas')">Roupas</button>
+  <button onclick="filtrarProdutos('acessorios')">Acessórios</button>
+  <button onclick="filtrarProdutos('games')">Games</button>
+  <button onclick="filtrarProdutos('casa')">Casa</button>
+    <button onclick="filtrarProdutos('higiene')">Higiene</button>
+</nav>
 
-  <label for="bebida-select">Escolha a bebida</label>
-  <select id="bebida-select">
-    <option value="" disabled selected>-- Selecione --</option>
-    <option value="Coca-Cola 350ml">Coca-Cola 350ml</option>
-    <option value="Guaraná 350ml">Guaraná 350ml</option>
-    <option value="Fanta Laranja 350ml">Fanta Laranja 350ml</option>
-    <option value="Água 500ml">Água 500ml</option>
-    <option value="Suco Natural">Suco Natural</option>
-  </select>
+<div class="banner">promoção relâmpago até às 23:59</div>
 
-  <label for="mesa-input">Número da mesa</label>
-  <input type="number" id="mesa-input" min="1" placeholder="Ex: 5" />
+<!-- 🔥 LISTA DE PRODUTOS -->
+<section class="produtos">
+  <div class="produto" data-categoria="roupas">
+    <img src="https://via.placeholder.com/150" alt="Produto 1">
+    <h3>Moletom Vermelho</h3>
+    <p>R$ 120,00</p>
+    <button onclick="addCarrinho('Moletom Vermelho', 120)">Adicionar ao Carrinho</button>
+  </div>
 
-  <label for="pagamento-select">Forma de pagamento</label>
-  <select id="pagamento-select">
-    <option value="Dinheiro" selected>Dinheiro</option>
-    <option value="Cartão">Cartão</option>
-    <option value="Pix">Pix</option>
-  </select>
+  <div class="produto" data-categoria="acessorios">
+    <img src="https://via.placeholder.com/150" alt="Produto 2">
+    <h3>Relógio Digital</h3>
+    <p>R$ 80,00</p>
+    <button onclick="addCarrinho('Relógio Digital', 80)">Adicionar ao Carrinho</button>
+  </div>
 
-  <label for="obs-textarea">Observações (opcional)</label>
-  <textarea id="obs-textarea" rows="3" placeholder="Sem cebola, mais queijo, etc..."></textarea>
+  <div class="produto" data-categoria="games">
+    <img src="https://via.placeholder.com/150" alt="Produto 3">
+    <h3>Controle PS5</h3>
+    <p>R$ 350,00</p>
+    <button onclick="addCarrinho('Controle PS5', 350)">Adicionar ao Carrinho</button>
+  </div>
 
-  <button class="btn" id="add-item-btn">Adicionar ao pedido</button>
+  <div class="produto" data-categoria="casa">
+    <img src="https://via.placeholder.com/150" alt="Produto 4">
+    <h3>Jogo de Panelas</h3>
+    <p>R$ 200,00</p>
+    <button onclick="addCarrinho('Jogo de Panelas', 200)">Adicionar ao Carrinho</button>
+  </div>
+  
+  <div class="produto" data-categoria="higiene">
+    <img src="https://i.imgur.com/aWquij1.jpeg150" alt="Produto 5">
+    <h3>pano de chão</h3>
+    <p>R$ 10,00</p>
+    <button onclick="addCarrinho('pano de chão', 10)">Adicionar ao Carrinho</button>
+  </div>
+</section>
 
-  <div class="item-list" id="pedido-lista"></div>
+<footer>
+  <p>© 2025 TG SHOP LONDRINA - Todos os direitos reservados</p>
+</footer>
 
-  <button class="btn" id="finalizar-btn" style="margin-top: 20px;" disabled>Finalizar Pedido</button>
-</main>
+<!-- MODAL DO CARRINHO -->
+<div id="carrinhoModal">
+  <div class="conteudo">
+    <h2>🛒 Seu Carrinho</h2>
+    <div id="listaCarrinho"></div>
+    <button class="btn-finalizar" onclick="abrirFormulario()">✅ Finalizar Pedido</button>
+    <button style="margin-top:10px; width:100%;" onclick="fecharCarrinho()">❌ Fechar</button>
+  </div>
+</div>
 
-<div id="alerta-pedido-pronto">🚨 Pedido pronto!</div>
-
-<footer>™ Opportunità Pizzaria Social - Desenvolvido por ChatGPT</footer>
+<!-- MODAL FORMULÁRIO DADOS DO CLIENTE -->
+<div id="dadosClienteModal">
+  <div class="conteudo">
+    <h2>📋 Seus Dados</h2>
+    <input type="text" id="nomeCliente" class="input-campo" placeholder="Seu nome completo">
+    <input type="text" id="enderecoCliente" class="input-campo" placeholder="Seu endereço completo">
+    <button class="btn-finalizar" onclick="finalizarPedido()">📲 Enviar Pedido no WhatsApp</button>
+    <button style="margin-top:10px; width:100%;" onclick="fecharFormulario()">❌ Cancelar</button>
+  </div>
+</div>
 
 <script>
-  const pizzaSelect = document.getElementById('pizza-select');
-  const bordaSelect = document.getElementById('bordas-select');
-  const bebidaSelect = document.getElementById('bebida-select');
-  const mesaInput = document.getElementById('mesa-input');
-  const pagamentoSelect = document.getElementById('pagamento-select');
-  const obsTextarea = document.getElementById('obs-textarea');
-  const addItemBtn = document.getElementById('add-item-btn');
-  const pedidoLista = document.getElementById('pedido-lista');
-  const finalizarBtn = document.getElementById('finalizar-btn');
+let carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
 
-  let pedidoItens = [];
+// ✅ Adicionar produto no carrinho
+function addCarrinho(produto, preco) {
+    carrinho.push({produto, preco});
+    localStorage.setItem('carrinho', JSON.stringify(carrinho));
+    alert('✅ Produto adicionado ao carrinho!');
+}
 
-  function atualizarLista() {
-    pedidoLista.innerHTML = '';
-    pedidoItens.forEach((item, index) => {
-      const div = document.createElement('div');
-      div.className = 'item';
+// ✅ Abrir carrinho
+function abrirCarrinho() {
+    document.getElementById('carrinhoModal').style.display = 'flex';
+    atualizarCarrinho();
+}
 
-      div.innerHTML = `
-        <div>
-          <strong>${item.pizza}</strong> | Borda: ${item.borda} | Bebida: ${item.bebida || '-'}
-        </div>
-        <button class="remove-btn" data-index="${index}">&times;</button>
-      `;
-      pedidoLista.appendChild(div);
+// ✅ Fechar carrinho
+function fecharCarrinho() {
+    document.getElementById('carrinhoModal').style.display = 'none';
+}
+
+// ✅ Atualizar carrinho
+function atualizarCarrinho() {
+    let lista = document.getElementById('listaCarrinho');
+    lista.innerHTML = '';
+    let total = 0;
+
+    carrinho.forEach((item, index) => {
+        total += item.preco;
+        lista.innerHTML += `
+            <div class="item-carrinho">
+                ${item.produto} - R$ ${item.preco},00 
+                <button onclick="removerItem(${index})">🗑</button>
+            </div>`;
     });
 
-    finalizarBtn.disabled = pedidoItens.length === 0 || mesaInput.value === '';
-  }
+    lista.innerHTML += `<p><strong>Total: R$ ${total},00</strong></p>`;
+}
 
-  addItemBtn.addEventListener('click', () => {
-    const pizza = pizzaSelect.value;
-    const borda = bordaSelect.value;
-    const bebida = bebidaSelect.value;
-    const mesa = mesaInput.value.trim();
+// ✅ Remover item do carrinho
+function removerItem(index) {
+    carrinho.splice(index, 1);
+    localStorage.setItem('carrinho', JSON.stringify(carrinho));
+    atualizarCarrinho();
+}
 
-    if (!pizza) {
-      alert('Selecione uma pizza!');
-      return;
+// ✅ Abrir formulário para nome e endereço
+function abrirFormulario() {
+    if (carrinho.length === 0) {
+        alert('⚠️ Seu carrinho está vazio!');
+        return;
     }
-    if (!mesa) {
-      alert('Informe o número da mesa!');
-      return;
-    }
+    fecharCarrinho();
+    document.getElementById('dadosClienteModal').style.display = 'flex';
+}
 
-    pedidoItens.push({ pizza, borda, bebida });
-    atualizarLista();
+// ✅ Fechar formulário
+function fecharFormulario() {
+    document.getElementById('dadosClienteModal').style.display = 'none';
+}
 
-    // Limpar campos para novo item
-    pizzaSelect.selectedIndex = 0;
-    bordaSelect.selectedIndex = 0;
-    bebidaSelect.selectedIndex = 0;
-  });
+// ✅ Finalizar pedido (envia para WhatsApp)
+function finalizarPedido() {
+    let nome = document.getElementById('nomeCliente').value;
+    let endereco = document.getElementById('enderecoCliente').value;
 
-  pedidoLista.addEventListener('click', (e) => {
-    if (e.target.classList.contains('remove-btn')) {
-      const idx = e.target.dataset.index;
-      pedidoItens.splice(idx, 1);
-      atualizarLista();
-    }
-  });
-
-  mesaInput.addEventListener('input', () => {
-    finalizarBtn.disabled = pedidoItens.length === 0 || mesaInput.value === '';
-  });
-
-  finalizarBtn.addEventListener('click', () => {
-    if (pedidoItens.length === 0) {
-      alert('Adicione ao menos um item ao pedido!');
-      return;
-    }
-    if (!mesaInput.value.trim()) {
-      alert('Informe o número da mesa!');
-      return;
+    if (!nome || !endereco) {
+        alert('⚠️ Por favor, preencha seu nome e endereço.');
+        return;
     }
 
-    const formaPagamento = pagamentoSelect.value;
-    const observacoes = obsTextarea.value.trim();
-    const mesa = mesaInput.value.trim();
+    let mensagem = `*Novo Pedido via Site*%0A%0A`;
+    mensagem += `👤 *Cliente:* ${nome}%0A`;
+    mensagem += `📍 *Endereço:* ${endereco}%0A%0A`;
+    mensagem += `🛒 *Itens do pedido:*%0A`;
 
-    // Montar mensagem para WhatsApp
-    let msg = `🧾 *Novo pedido* - Mesa: ${mesa}\n\n`;
-
-    pedidoItens.forEach((item, i) => {
-      msg += `🍕 ${item.pizza} | Borda: ${item.borda} | Bebida: ${item.bebida || '-'}\n`;
+    carrinho.forEach(item => {
+        mensagem += `• ${item.produto} - R$ ${item.preco},00%0A`;
     });
-    msg += `\n💰 Forma de pagamento: ${formaPagamento}\n`;
-    if (observacoes) {
-      msg += `📝 Observações: ${observacoes}\n`;
-    }
-    const encodedMsg = encodeURIComponent(msg);
-    const whatsappNumber = '5511988553006'; // Seu número da cozinha
 
-    // Abrir WhatsApp no celular/PC
-    const whatsappUrl = `https://wa.me/${whatsappNumber}?text=${encodedMsg}`;
-    window.open(whatsappUrl, '_blank');
+    let total = carrinho.reduce((acc, item) => acc + item.preco, 0);
+    mensagem += `%0A💰 *Total: R$ ${total},00*`;
 
-    // Enviar pedido para o painel via localStorage (simples pra demo)
-    const pedidosPainel = JSON.parse(localStorage.getItem('pedidosPainel') || '[]');
-    pedidosPainel.push({mesa, itens: pedidoItens, formaPagamento, observacoes, timestamp: Date.now()});
-    localStorage.setItem('pedidosPainel', JSON.stringify(pedidosPainel));
+    window.open(`https://wa.me/554399632114?text=${mensagem}`, "_blank");
 
-    // Resetar pedido
-    pedidoItens = [];
-    atualizarLista();
-    mesaInput.value = '';
-    obsTextarea.value = '';
-    pagamentoSelect.selectedIndex = 0;
+    localStorage.removeItem('carrinho');
+    carrinho = [];
+    fecharFormulario();
+}
 
-    alert('Pedido enviado com sucesso!');
-  });
+// ✅ Filtro de categorias
+function filtrarProdutos(categoria) {
+    let produtos = document.querySelectorAll('.produto');
 
-  // ========== ALERTA DE PEDIDO PRONTO ==========
-  const alertaDiv = document.getElementById('alerta-pedido-pronto');
-  let somPedido = new Audio('https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg'); // som de alerta
-
-  let ultimoTimestamp = 0;
-
-  function checarPedidosProntos() {
-    // Pega os pedidos do localStorage do painel de cozinha
-    const pedidos = JSON.parse(localStorage.getItem('pedidosProntos') || '[]');
-
-    // Se tiver pedido novo com timestamp maior que o último que avisou, mostra alerta
-    pedidos.forEach(pedido => {
-      if (pedido.timestamp > ultimoTimestamp) {
-        ultimoTimestamp = pedido.timestamp;
-        mostrarAlerta();
-      }
+    produtos.forEach(produto => {
+        if (categoria === 'todos' || produto.dataset.categoria === categoria) {
+            produto.style.display = 'block';
+        } else {
+            produto.style.display = 'none';
+        }
     });
-  }
-
-  function mostrarAlerta() {
-    alertaDiv.style.display = 'block';
-    somPedido.play();
-    setTimeout(() => {
-      alertaDiv.style.display = 'none';
-    }, 5000);
-  }
-
-  // Verifica a cada 3 segundos
-  setInterval(checarPedidosProntos, 3000);
+}
 </script>
+
 </body>
 </html>
