--- a/index.html
+++ b/index.html
@@ -89,28 +89,28 @@
 <!-- 🔥 LISTA DE PRODUTOS -->
 <section class="produtos">
   <div class="produto" data-categoria="roupas">
-    <img src="https://via.placeholder.com/150" alt="Produto 1">
+    <img src="https://i.imgur.com/rJS9YgO.jpeg/150" alt="Produto 1">
     <h3>Moletom Vermelho</h3>
     <p>R$ 120,00</p>
     <button onclick="addCarrinho('Moletom Vermelho', 120)">Adicionar ao Carrinho</button>
   </div>
 
   <div class="produto" data-categoria="acessorios">
-    <img src="https://via.placeholder.com/150" alt="Produto 2">
+    <img src="https://i.imgur.com/J48hTZb.jpeg/150" alt="Produto 2">
     <h3>Relógio Digital</h3>
     <p>R$ 80,00</p>
     <button onclick="addCarrinho('Relógio Digital', 80)">Adicionar ao Carrinho</button>
   </div>
 
   <div class="produto" data-categoria="games">
-    <img src="https://via.placeholder.com/150" alt="Produto 3">
+    <img src="https://i.imgur.com/rWSjhvj.jpeg/150" alt="Produto 3">
     <h3>Controle PS5</h3>
     <p>R$ 350,00</p>
     <button onclick="addCarrinho('Controle PS5', 350)">Adicionar ao Carrinho</button>
   </div>
 
   <div class="produto" data-categoria="casa">
-    <img src="https://via.placeholder.com/150" alt="Produto 4">
+    <img src="https://i.imgur.com/CzYCAWQ.jpeg/150" alt="Produto 4">
     <h3>Jogo de Panelas</h3>
     <p>R$ 200,00</p>
     <button onclick="addCarrinho('Jogo de Panelas', 200)">Adicionar ao Carrinho</button>
