--- a/index.html
+++ b/index.html
@@ -256,6 +256,9 @@ function finalizarPedido() {
 
     window.open(`https://wa.me/554399632114?text=${mensagem}`, "_blank");
 
+window.open(`https://wa.me/5511988553006?text=${mensagem}`, "_blank");
+
+
     localStorage.removeItem('carrinho');
     carrinho = [];
     fecharFormulario();
