--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ function enviarMensagemCallMeBot(mensagem) {
       }
     })
     .catch(() => {
-      mostrarToast('⚠️ Pedido enviado com sucesso pelo CallMeBot!.');
+      mostrarToast('✅ Pedido enviado com sucesso pelo CallMeBot!.');
     });
 }
 
